# Leetcode_practice

./: CMakeLists.txt  README.md  common.h  main.cpp
1004-max-consecutive-ones-iii/: 1004-max-consecutive-ones-iii.cpp
1606-find-servers-that-handled-most-number-of-requests/: 1606-find-servers-that-handled-most-number-of-requests.cpp
1672-richest-customer-wealth/: 1672-richest-customer-wealth.cpp
1706-where-will-the-ball-fall/: 1706-where-will-the-ball-fall.cpp  1706-where-will-the-ball-fall.py
1823-find-the-winner-of-the-circular-game/: 1823-find-the-winner-of-the-circular-game.cpp
2024-maximize-the-confusion-of-an-exam/: 2024-maximize-the-confusion-of-an-exam.cpp
2028-find-missing-observations/: 2028-find-missing-observations.cpp
2038-remove-colored-pieces-if-both-neighbors-are-the-same-color/: 2038-remove-colored-pieces-if-both-neighbors-are-the-same-color.cpp  2038-remove-colored-pieces-if-both-neighbors-are-the-same-color2.cpp
2039-the-time-when-the-network-becomes-idle/: 2039-the-time-when-the-network-becomes-idle.cpp
2043-simple-bank-system/: 2043-simple-bank-system.cpp
2044-count-number-of-maximum-bitwise-or-subsets/: 2044-count-number-of-maximum-bitwise-or-subsets.cpp  2044-count-number-of-maximum-bitwise-or-subsets.py
2049-count-nodes-with-the-highest-score/: 2049-count-nodes-with-the-highest-score.cpp
2055-plates-between-candles/: 2055-plates-between-candles.cpp
209-minimum-size-subarray-sum/: 209-minimum-size-subarray-sum.cpp  209-minimum-size-subarray-sum.py  209-minimum-size-subarray-sum2.cpp
2100-find-good-days-to-rob-the-bank/: 2100-find-good-days-to-rob-the-bank.cpp
2104-sum-of-subarray-ranges/: 2104-sum-of-subarray-ranges.cpp  2104-sum-of-subarray-ranges.py
2134-minimum-swaps-to-group-all-1s-together-ii/: 2134-minimum-swaps-to-group-all-1s-together-ii.cpp
22-generate-parentheses/: 22-generate-parentheses.cpp
226-invert-binary-tree/: 226-invert-binary-tree.cpp
255-verify-preorder-sequence-in-binary-search-tree/: 255-verify-preorder-sequence-in-binary-search-tree.cpp
258-add-digits/: 258-add-digits.cpp  258-add-digits.py
290-n-ary-tree-postorder-traversal/: 290-n-ary-tree-postorder-traversal.cpp
297-serialize-and-deserialize-binary-tree/: 297-serialize-and-deserialize-binary-tree.cpp
310-minimum-height-trees/: 310-minimum-height-trees.cpp
357-count-numbers-with-unique-digits/: 357-count-numbers-with-unique-digits.cpp
380-insert-delete-getrandom-o1/: 380-insert-delete-getrandom-o1.py
385-mini-parser/: 385-mini-parser.py
386-lexicographical-numbers/: 386-lexicographical-numbers.cpp
388-longest-absolute-file-path/: 388-longest-absolute-file-path.cpp  388-longest-absolute-file-path.py
393-utf-8-validation/: 393-utf-8-validation.cpp
396-rotate-function/: 396-rotate-function.cpp
429-n-ary-tree-level-order-traversal/: 429-n-ary-tree-level-order-traversal.cpp
432-all-oone-data-structure/: 432-all-onne-data-structure_list_hash.cpp  432-all-oone-data-structure.cpp
433-minimum-genetic-mutation/: 433-minimum-genetic-mutation.cpp
440-k-th-smallest-in-lexicographical-order/: 440-k-th-smallest-in-lexicographical-order.cpp
464-can-i-win/: 464-can-i-win.cpp
(+39 files in other folders)
